src/test/deca/context/invalid/class_field_public_as_identifier.deca
/*
    Description: Test sur la déclaration d'un attribut de classe avec la visibilité public mais sans type

    Résultat : erreur contextuelle (deca:7:4)
*/
class C{
    public x;
}
// @expected_output deca:7:4
